--- a/www/html/index.html
+++ b/www/html/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>My Rust + Webpack project!</title>
-  <link rel="stylesheet" href="styles.css" type="text/css" media="screen">
-  <link rel="preload" as="image" href="Button.svg">
-  <link rel="preload" as="font" href="kenney_future_narrow-webfont.woff2">
+  <link rel="stylesheet" href="../css/styles.css" type="text/css" media="screen">
+  <link rel="preload" as="image" href="../assets/Button.svg">
+  <link rel="preload" as="font" href="../assets/kenney_future_narrow-webfont.woff2">
   <link rel="icon" href="../favicon.png">
 </head>
 <body>
-<h1>hehehe</h1>
   <div id="ui"></div>
   <canvas id="canvas" style="outline: none" tabindex="0" height="600" width="600">
     Your browser does not support the Canvas.
